--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@mui/material": "^5.15.1",
+		"@mui/styled-engine-sc": "^6.0.0-alpha.9",
 		"@types/react-router": "^5.1.20",
 		"axios": "^1.5.1",
 		"bootstrap": "^5.3.2",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.9.1",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.17.0"
+		"react-responsive-carousel": "^3.2.23",
+		"react-router-dom": "^6.17.0",
+		"styled-components": "^6.1.2"
 	},
 	"devDependencies": {
 		"@types/react": "18.2.0",
