--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/react-router": "^5.1.20",
 		"axios": "^1.5.1",
 		"bootstrap": "^5.3.2",
+		"firebase": "^10.7.1",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.9.1",
 		"react-dom": "^18.2.0",
