--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ Flask-Cors==4.0.0
 fonttools==4.38.0
 graphic==1.0.0a6
 graphics.py==5.0.1.post1
+gunicorn==20.0.04
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
