--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"bootstrap": "^5.3.2",
 		"express": "^4.18.2",
 		"firebase": "^10.7.1",
+		"http-proxy-middleware": "^2.0.6",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.9.2",
 		"react-dom": "^18.2.0",
