--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@mui/material": "^5.15.1",
 		"@mui/styled-engine-sc": "^6.0.0-alpha.9",
 		"@types/react-router": "^5.1.20",
-		"axios": "^1.5.1",
+		"axios": "^1.6.5",
 		"bootstrap": "^5.3.2",
 		"express": "^4.18.2",
 		"firebase": "^10.7.1",
@@ -28,7 +28,9 @@
 		"styled-components": "^6.1.2"
 	},
 	"devDependencies": {
+		"@types/axios": "^0.14.0",
 		"@types/react": "18.2.0",
+		"@types/react-bootstrap": "^0.32.35",
 		"@types/react-dom": "^18.2.14",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
