--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"start": "node server.cjs",
+		"start": "concurrently \"python app.py\" \"node server.cjs\"",
 		"postinstall": "npm run build"
 	},
 	"dependencies": {
@@ -17,6 +17,7 @@
 		"@types/react-router": "^5.1.20",
 		"axios": "^1.6.5",
 		"bootstrap": "^5.3.2",
+		"concurrently": "^8.2.2",
 		"express": "^4.18.2",
 		"firebase": "^10.7.1",
 		"http-proxy-middleware": "^2.0.6",
