--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"start": "node server.cjs",
+		"start": "node --max-http-header-size=30000 server.js",
 		"postinstall": "npm run build"
 	},
 	"dependencies": {
