--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"axios": "^1.6.5",
 		"bootstrap": "^5.3.2",
 		"concurrently": "^8.2.2",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"firebase": "^10.7.1",
 		"http-proxy-middleware": "^2.0.6",
